== Version ?.?? ==

?? ??? ????

* The +ldd+(1) wrapper can work if overriden with +FAKECHROOT_CMD_SUBST+
  environment variable.
* Fixes were made for +mktemp+(3) function if used on a path in
  +FAKECHROOT_EXCLUDE_PATHS+.
* The +_xftw64+(glibc) function is reenabled. It had wrong wrapper.
* Fixes were made for +__realpath_chk+(glibc) function when +__chk_fail+
  function is missing.
* New functions +mkostemp+(3), +mkostemp64+(3), +mkostemps+(3),
  +mkostemps64+(3), +mkstemps+(3) and +mkstemps64+(3) were implemented.
  It fixes +sed -i+ command.

== Version 2.16 ==

11 Dec 2011

* The fakechroot script loads additional environment settings from
  configuration directory (+--config-dir+ option). By default additional
  settings are provided for +chroot+(8) and +debootstrap+(8) commands.
* Wrapped +chroot+(8) command loads +ld.so.conf+ paths to +LD_LIBRARY_PATH+
  environment variable.
* The +debootstrap+(8) command works with default, buildd and minbase
  variants.
* Fixes were made for +getpeeraddr+(3) and +getsockaddr+(3) functions.
  +lwp-request+ command is working correctly.

== Version 2.15 ==

29 Sep 2011

* New function +faccessat+(2) was added.  It fixes +test -r+ command.
  Thanks to Johannes Schauer.
* The +popen+(3) function were reimplemented based on OpenBSD source to
  prevent some coredumps with newer GNU C Library.

== Version 2.14 ==

18 Dec 2010

* The source code was refactored: all functions was moved to separated files.
* The +opendir+(3) function is compiled only if it doesn't call other function
  internally.  It fixes +opendir+(3), +fts_open+(3) and +ftw+(3) functions.
* The +fts_*+(3) functions were reimplemented based on OpenBSD source.
* The +ftw_*+(3) functions were reimplemented based on GNU C Library source.
* The +__opendir2+(3) function was reimplemented based on FreeBSD source.
* Fixes were made for older GNU C Library and for cross-compiling environment.

== Version 2.13.1 ==

30 Nov 2010
