@@ -46,9 +46,14 @@ wrapper(__readlink_chk, ssize_t, (const char * path, char * buf, size_t bufsiz, 
         fakechroot_ptr = strstr(tmp, fakechroot_path);
         if (fakechroot_ptr != tmp) {
             tmpptr = tmp;
-        } else {
+        } else if (tmp[strlen(fakechroot_path)] == '\0') {
+            tmpptr = "/";
+            status = strlen(tmpptr);
+        } else if (tmp[strlen(fakechroot_path)] == '/') {
             tmpptr = tmp + strlen(fakechroot_path);
             status -= strlen(fakechroot_path);
+        } else {
+            tmpptr = tmp;
         }
         if (strlen(tmpptr) > bufsiz) {
             status = bufsiz;
