@@ -85,7 +85,7 @@
                     if (strlen((path)) == strlen(fakechroot_path)) { \
                         ((char *)(path))[0] = '/'; \
                         ((char *)(path))[1] = '\0'; \
-                    } else { \
+                    } else if ( ((char *)(path))[strlen(fakechroot_path)] == '/' ) { \
                         memmove((void*)(path), (path)+strlen(fakechroot_path), 1+strlen((path))-strlen(fakechroot_path)); \
                     } \
                 } \
